# yd_backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
app/auth/: routes.py  services.py
app/data_sources/: routes.py  services.py
app/data_sources/amazon/: routes.py
app/database/: base.py  session.py
app/db/: database.py
app/drive/: routes.py  services.py
app/migrations/: env.py
app/models/: fibit.py  kindle.py  models.py  strong.py  workout.py
app/routes/: fitbit_routes.py  github_routes.py  reading_routes.py  retrieve_data.py  upload_data.py  utils.py  workout_routes.py
app/schema/: schemas.py  workout.py
app/services/: fitbit_service.py  reading_service.py  retrieve_data.py  upload_data.py  utils.py  workout_service.py
migrations/: env.py
migrations/versions/: 24a93bb80730_refactor_strong_workout_columns.py  3f12b644a560_add_page_flip_columns_to_kindle_reading.py  4eb5ab509a18_rename_fibit_steps_to_fitbit_steps.py  8e8b1598f1a9_create_kindle_reading_table.py  e14dffd41751_create_strong_workouts.py  e2e68fe3f052_add_image_column_to_kindle_reading_table.py  f37116511d67_create_strong_workout_tables.py  fe9e3f5f9c1c_create_fibit_tables.py
tests/: test_utils.py
yd_extractor/: main.py
yd_extractor/fitbit/: __init__.py  calories.py  exercise.py  sleep.py  steps.py  utils.py
yd_extractor/github/: repo_contributions.py
yd_extractor/kindle/: reading.py
yd_extractor/strong/: workouts.py
yd_extractor/utils/: pandas.py  utils.py
(+8 files in other folders)
