[tool.poetry]
name = "yd_extractor"
version = "0.1.0"
description = ""
authors = ["aebel-shajan <aebelshajan@gmail.com>"]
readme = "README.md"

# so many dependencies, who did this 😠
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
requests = "^2.32.3"
python-dotenv = "^1.0.1"
black = "^24.10.0"
gdown = "^5.2.0"
isort = "^6.0.1"
colorama = "^0.4.6"
flask = "^3.1.0"
sqlmodel = "^0.0.23"
flask-cors = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
